--- a/deploy/.env
+++ b/deploy/.env
@@ -1,2 +1,17 @@
 STORAGE_TSDB_RETENTION_TIME=30d
 STORAGE_TSDB_RETENTION_SIZE=8GB
+PORT=9090
+DATA_PATH=/prometheus
+CONFIG_PATH=/etc/prometheus
+INITIAL_CONFIG_FILENAME=prometheus-config.yml
+FINAL_CONFIG_FILENAME=prometheus.yml
+ENTRYPOINT_FILENAME=entrypoint.sh
+
+TRAEFIK_DOMAIN=change.me
+TRAEFIK_AUTH=user:$apr1$md5password
+TRAEFIK_ENTRYPOINT=https
+TRAEFIK_CERTRESOLVER=default
+
+DATA_VOL_TYPE=nfs
+DATA_VOL_OPTIONS=addr=<ip>,rw,nolock,noatime,tcp,rsize=8192,wsize=8192,timeo=14
+DATA_VOL_DEVICE=:/prometheus-vol/
