--- a/deploy/config/prometheus.yml
+++ b/deploy/config/prometheus.yml
@@ -1,10 +1,7 @@
 global:
-  scrape_interval: 15s
-  scrape_timeout: 10s
-  evaluation_interval: 30s
-
-  external_labels:
-    monitor: 'promswarm'
+  scrape_interval: 30s
+  scrape_timeout: 20s
+  evaluation_interval: 1m
 
 alerting:
   alertmanagers:
