Set volume type as NFSv4 by default

--- a/deploy/.env
+++ b/deploy/.env
@@ -12,6 +12,6 @@ TRAEFIK_AUTH=user:$apr1$md5password
 TRAEFIK_ENTRYPOINT=https
 TRAEFIK_CERTRESOLVER=default
 
-DATA_VOL_TYPE=nfs
+DATA_VOL_TYPE=nfs4
 DATA_VOL_OPTIONS=addr=<ip>,rw,nolock,noatime,tcp,rsize=8192,wsize=8192,timeo=14
 DATA_VOL_DEVICE=:/prometheus-vol/
