--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -68,6 +68,7 @@ networks:
 
   traefik-net:
     name: ${TRAEFIK_NET_NAME:-traefik-net}
+    driver: ${TRAEFIK_NET_DRIVER:-overlay}
     external: true
 
 volumes:
