Define external url to enable proxy access
Improve communication between services, using resoluble addresses.

Rename volume variables.

--- a/deploy/.env
+++ b/deploy/.env
@@ -7,11 +7,14 @@ INITIAL_CONFIG_FILENAME=prometheus-config.yml
 FINAL_CONFIG_FILENAME=prometheus.yml
 ENTRYPOINT_FILENAME=entrypoint.sh
 
+TRAEFIK_SUBDOMAIN=prometheus
 TRAEFIK_DOMAIN=change.me
 TRAEFIK_AUTH=user:$apr1$md5password
 TRAEFIK_ENTRYPOINT=https
 TRAEFIK_CERTRESOLVER=default
 
-DATA_VOL_TYPE=nfs4
-DATA_VOL_OPTIONS=addr=<ip>,rw,nolock,noatime,tcp,rsize=8192,wsize=8192,timeo=14
+VOL_TYPE=nfs4
+VOL_ADDR=127.0.0.1
+VOL_OPTS=rw,nolock,noatime,tcp,rsize=8192,wsize=8192,timeo=14
+DATA_VOL_NAME=prometheus-vol
 DATA_VOL_DEVICE=:/prometheus-vol/
