--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - --storage.tsdb.path=${DATA_PATH}
       - --storage.tsdb.retention.time=${STORAGE_TSDB_RETENTION_TIME}
       - --storage.tsdb.retention.size=${STORAGE_TSDB_RETENTION_SIZE}
+      - --web.external-url=https://${TRAEFIK_SUBDOMAIN}.${TRAEFIK_DOMAIN}
     environment:
       CONFIG_PATH:
       INITIAL_CONFIG_FILENAME:
@@ -48,7 +49,7 @@ services:
         traefik.enable: 'true'
         traefik.http.routers.prometheus.entrypoints: ${TRAEFIK_ENTRYPOINT:-https}
         traefik.http.routers.prometheus.tls.certresolver: ${TRAEFIK_CERTRESOLVER:-default}
-        traefik.http.routers.prometheus.rule: Host(`${TRAEFIK_SUBDOMAIN:-prometheus}.${TRAEFIK_DOMAIN}`)
+        traefik.http.routers.prometheus.rule: Host(`${TRAEFIK_SUBDOMAIN}.${TRAEFIK_DOMAIN}`)
         traefik.http.middlewares.prometheus-auth.basicauth.users: ${TRAEFIK_AUTH}
         traefik.http.routers.prometheus.middlewares: prometheus-auth
         traefik.http.services.prometheus.loadbalancer.server.port: ${PORT}
@@ -73,11 +74,11 @@ networks:
 
 volumes:
   data-vol:
-    name: ${DATA_VOL_NAME:-prometheus-vol}
+    name: ${DATA_VOL_NAME}
     driver: local
     driver_opts:
-      type: ${DATA_VOL_TYPE}
-      o: ${DATA_VOL_OPTIONS}
+      type: ${VOL_TYPE}
+      o: addr=${VOL_ADDR},${VOL_OPTS}
       device: ${DATA_VOL_DEVICE}
 
 configs:
