Update compose and add multi-environment CI

--- a/deploy/compose.yaml
+++ b/deploy/compose.yaml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   prometheus:
     image: ${IMAGE_NAME:-prom/prometheus}:${IMAGE_TAG:-latest}
@@ -73,12 +71,12 @@ networks:
 
 volumes:
   data-vol:
-    name: ${DATA_VOL_NAME:-prometheus-vol}
-    driver: local
+    name: ${DATA_VOL_NAME}
+    driver: ${VOL_DRIVER}
     driver_opts:
       type: ${VOL_TYPE}
       o: addr=${VOL_ADDR},${VOL_OPTS}
-      device: ${DATA_VOL_DEVICE:-:/prometheus-vol/}
+      device: ${DATA_VOL_DEVICE}
 
 configs:
   entrypoint-config:
