--- a/deploy/.env
+++ b/deploy/.env
@@ -14,4 +14,7 @@ TRAEFIK_AUTH=user:$apr1$md5password
 
 VOL_TYPE=nfs4
 VOL_ADDR=127.0.0.1
-VOL_OPTS=rw,nolock,noatime,tcp,rsize=8192,wsize=8192,timeo=14
+VOL_OPTS=nolock,noacl,noatime,nodiratime
+
+DATA_VOL_NAME=prometheus-vol
+DATA_VOL_DEVICE=:/prometheus-vol/
