--- a/deploy/.env
+++ b/deploy/.env
@@ -12,6 +12,7 @@ TRAEFIK_SUBDOMAIN=prometheus
 TRAEFIK_DOMAIN=change.me
 TRAEFIK_AUTH=user:$apr1$md5password
 
+VOL_DRIVER=local
 VOL_TYPE=nfs4
 VOL_ADDR=127.0.0.1
 VOL_OPTS=nolock,noacl,noatime,nodiratime
