--- a/deploy/compose.yaml
+++ b/deploy/compose.yaml
@@ -39,6 +39,9 @@ services:
     deploy:
       mode: replicated
       replicas: ${REPLICAS:-1}
+      placement:
+        constraints:
+          - ${PLACEMENT_CONSTRAINTS_NAME:-node.hostname} ${PLACEMENT_CONSTRAINTS_OPERATOR:-==} ${PLACEMENT_CONSTRAINTS_VALUE:-node}
       restart_policy:
         delay: ${RESTART_DELAY:-3s}
       update_config:
@@ -53,10 +56,10 @@ services:
       resources:
         limits:
           cpus: '${RESOURCES_LIMITS_CPUS:-0.5}'
-          memory: ${RESOURCES_LIMITS_MEMORY:-256M}
+          memory: ${RESOURCES_LIMITS_MEMORY:-512M}
         reservations:
           cpus: '${RESOURCES_RESERVATIONS_CPUS:-0.001}'
-          memory: ${RESOURCES_RESERVATIONS_MEMORY:-128M}
+          memory: ${RESOURCES_RESERVATIONS_MEMORY:-256M}
 
 networks:
   metric-net:
@@ -71,12 +74,7 @@ networks:
 
 volumes:
   data-vol:
-    name: ${DATA_VOL_NAME}
-    driver: ${VOL_DRIVER}
-    driver_opts:
-      type: ${VOL_TYPE}
-      o: addr=${VOL_ADDR},${VOL_OPTS}
-      device: ${DATA_VOL_DEVICE}
+    name: ${DATA_VOL_NAME:-prometheus-vol}
 
 configs:
   entrypoint-config:
