Improve alerting and update resources
Add parameters for log level and port configuration.

Use IP instead of localhost at health command.

Clean alert rules, improve syntax and simplify messages and labels.

Migrate rule checking script to use official prometheus image, with
improved support for newer rule syntax and less code.

Use latest docker tag at ci job, because stable tag is too old.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ check-rules:
   stage: test
   image: ${DOCKER_IMAGE}
   variables:
-    DOCKER_IMAGE: docker:stable
+    DOCKER_IMAGE: docker:latest
     DIND_IMAGE: docker:dind
   services:
     - ${DIND_IMAGE}
