--- a/deploy/rules/swarm_service.rules.yml
+++ b/deploy/rules/swarm_service.rules.yml
@@ -1,18 +1,22 @@
 groups:
-- name: swarm_service
-  rules:
-  - alert: TargetServiceInRestartLoop
-    expr: avg without(instance)(changes(process_start_time_seconds[1h]) > bool 3) > 0
-    for: 10m
+  - name: swarm_service
     labels:
-      severity: warning
-    annotations:
-      description: Service '{{$labels.job}}' has been restarted at least 3 times since last hour
+      groupname: swarm_service
+    rules:
+      - alert: TargetServiceInRestartLoop
+        expr: avg without(instance)(changes(process_start_time_seconds[1h]) > bool 3) > 0
+        for: 10m
+        labels:
+          severity: warning
+        annotations:
+          description: >-
+            Service '{{$labels.job}}' has been restarted at least 3 times since last hour
 
-  - alert: TargetServiceIsDown
-    expr: up == 0
-    for: 5m
-    labels:
-      severity: warning
-    annotations:
-      description: Service '{{$labels.job}}' is down
+      - alert: TargetServiceIsDown
+        expr: up == 0
+        for: 5m
+        labels:
+          severity: warning
+        annotations:
+          description: >-
+            Service '{{$labels.job}}' is down
