--- a/deploy/rules/swarm_node.rules.yml
+++ b/deploy/rules/swarm_node.rules.yml
@@ -1,44 +1,46 @@
 groups:
-- name: swarm_node
-  rules:
-  - alert: node_cpu_usage
-    expr: 100 - (avg(irate(node_cpu_seconds_total{mode="idle"}[1m]) * ON(instance) GROUP_LEFT(node_name)
-      node_meta * 100) BY (node_name)) > 90
-    for: 5m
+  - name: swarm_node
     labels:
-      severity: warning
-    annotations:
-      description: Swarm node {{$labels.node_name}} CPU usage is at {{$value | printf "%.1f"}}%
-      summary: CPU alert for Swarm node '{{$labels.node_name}}'
+      groupname: swarm_node
+    rules:
+      - alert: node_cpu_usage
+        expr: 100 - (avg(irate(node_cpu_seconds_total{mode="idle"}[1m]) * ON(instance) GROUP_LEFT(node_name)
+          node_meta * 100) BY (node_name)) > 90
+        for: 5m
+        labels:
+          severity: warning
+        annotations:
+          description: >-
+            CPU usage is {{$value | printf "%.1f"}}% at Swarm node '{{$labels.node_name}}'
 
-  - alert: node_memory_usage
-    expr: sum(((node_memory_MemTotal_bytes - node_memory_MemAvailable_bytes) / node_memory_MemTotal_bytes)
-      * ON(instance) GROUP_LEFT(node_name) node_meta * 100) BY (node_name) > 90
-    for: 5m
-    labels:
-      severity: warning
-    annotations:
-      description: Swarm node {{$labels.node_name}} memory usage is at {{$value | printf "%.1f"}}%
-      summary: Memory alert for Swarm node '{{$labels.node_name}}'
+      - alert: node_memory_usage
+        expr: sum(((node_memory_MemTotal_bytes - node_memory_MemAvailable_bytes) / node_memory_MemTotal_bytes)
+          * ON(instance) GROUP_LEFT(node_name) node_meta * 100) BY (node_name) > 90
+        for: 5m
+        labels:
+          severity: warning
+        annotations:
+          description: >-
+            Memory usage is {{$value | printf "%.1f"}}% at Swarm node '{{$labels.node_name}}'
 
-  - alert: node_disk_usage
-    expr: ((node_filesystem_size_bytes{mountpoint=~"/.*"} -
-      node_filesystem_free_bytes{mountpoint=~"/.*"}) * 100 /
-      node_filesystem_size_bytes{mountpoint=~"/.*"}) *
-      ON(instance) GROUP_LEFT(node_name) node_meta > 85
-    for: 5m
-    labels:
-      severity: critical
-    annotations:
-      description: Swarm node {{$labels.node_name}} disk '{{$labels.mountpoint}}' usage is at {{$value | printf "%.1f"}}%
-      summary: Disk '{{$labels.mountpoint}}' alert for Swarm node '{{$labels.node_name}}'
+      - alert: node_disk_usage
+        expr: ((node_filesystem_size_bytes{mountpoint!~"/var/lib/docker/.*"} -
+          node_filesystem_free_bytes{mountpoint!~"/var/lib/docker/.*"}) * 100 /
+          node_filesystem_size_bytes{mountpoint!~"/var/lib/docker/.*"}) *
+          ON(instance) GROUP_LEFT(node_name) node_meta > 85
+        for: 5m
+        labels:
+          severity: critical
+        annotations:
+          description: >-
+            Disk '{{$labels.mountpoint}}' usage is {{$value | printf "%.1f"}}% at Swarm node '{{$labels.node_name}}'
 
-  - alert: node_disk_fill_rate_6h
-    expr: predict_linear(node_filesystem_free_bytes{mountpoint=~"/.*"}[1h], 6 * 3600) *
-      ON(instance) GROUP_LEFT(node_name) node_meta < 0
-    for: 1h
-    labels:
-      severity: critical
-    annotations:
-      description: Swarm node {{$labels.node_name}} disk '{{$labels.mountpoint}}' is going to fill up in 6h
-      summary: Disk '{{$labels.mountpoint}}' fill alert for Swarm node '{{$labels.node_name}}'
+      - alert: node_disk_fill_rate_6h
+        expr: predict_linear(node_filesystem_free_bytes{mountpoint!~"/var/lib/docker/.*"}[1h], 6 * 3600) *
+          ON(instance) GROUP_LEFT(node_name) node_meta < 0
+        for: 1h
+        labels:
+          severity: critical
+        annotations:
+          description: >-
+            Disk '{{$labels.mountpoint}}' is going to fill up in 6h at Swarm node '{{$labels.node_name}}'
